<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner">

            <TextView
                android:id="@+id/name_of_employer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employer"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/salary"
                android:layout_below="@+id/name_of_employer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/salary"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hours"
                android:layout_below="@+id/salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/result"
                android:layout_below="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calendar"
                android:layout_below="@id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/delete"
                android:background="@drawable/delete"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                tools:ignore="RelativeOverlap,SpeakableTextPresentCheck"
                android:contentDescription="@string/image_for_delete" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
