<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/corner"
        android:layout_margin="10dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <EditText
                android:id="@+id/employer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/employer"
                android:inputType="textPersonName"
                android:background="@drawable/corner_of_edittext"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                tools:ignore="Autofill,TextContrastCheck,DuplicateSpeakableTextCheck" />
            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/hours"
                android:background="@drawable/corner_of_edittext"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                tools:ignore="Autofill" />
            <EditText
                android:id="@+id/salary"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/salary"
                android:background="@drawable/corner_of_edittext"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                tools:ignore="Autofill" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calendar"
                android:layout_marginTop="10dp"
                android:background="@drawable/corner_of_calendar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create"
                    android:padding="20dp"
                    android:backgroundTint="@color/teal_700"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/teal_700"
                    android:padding="20dp"
                    android:text="@string/events"
                    android:textColor="@color/white"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>